--- a/2025/03/05.md
+++ b/2025/03/05.md
@@ -1,4 +1,4 @@
-# 私が買ったのはレンコン粉 〜Kizuna AI Chinaと学ぶ中国語〜
+# 私が買ったのはワラビ粉 〜Kizuna AI Chinaと学ぶ中国語〜
 ※ 中国語学習用の非公式訳です
 
 ## 動画
@@ -18,9 +18,9 @@ shì kèfú shì ba
 shì zhèyàng de la  
 実はこうなんですよ  
 
-我买的藕根粉  
-wǒ mǎi de ǒugēn fěn  
-私が買ったのは藕根粉（レンコン粉）で  
+我买的蕨根粉  
+wǒ mǎi de juégēn fěn  
+私が買ったのは蕨根粉（ワラビ粉）で  
 
 怎么给我送的酸辣粉啊  
 zěnme gěi wǒ sòng de suānlàfěn a  
@@ -54,9 +54,9 @@ bú shì gēmenr
 nǐ yǐwéi wǒ  
 あなたは私が  
 
-为什么买藕根粉啊  
-wèishénme mǎi ǒugēn fěn a  
-なんで藕根粉を買ったのかと思います？  
+为什么买蕨根粉啊  
+wèishénme mǎi juégēn fěn a  
+なんで蕨根粉を買ったのかと思います？  
 
 你看看我的售后地址呢  
 nǐ kànkan wǒ de shòuhòu dìzhǐ ne  
@@ -82,13 +82,15 @@ zuǐ jiù huì biànchéng dà xiāngcháng a
 zhèyàng ba wǒ gěi nǐ jì huíqù  
 じゃあこうしましょう、私が返送します  
 
-你重新给我发藕根粉行不  
-nǐ chóngxīn gěi wǒ fā ǒugēn fěn xíng bù  
-新しく藕根粉を送ってもらえませんか？  
+你重新给我发蕨根粉行不  
+nǐ chóngxīn gěi wǒ fā juégēn fěn xíng bù  
+新しく蕨根粉を送ってもらえませんか？  
 
-我就想吃藕根粉啊  
-wǒ jiù xiǎng chī ǒugēn fěn a  
-私はただ藕根粉が食べたいだけなんです  
+我就想吃蕨根粉啊  
+wǒ jiù xiǎng chī juégēn fěn a  
+私はただ蕨根粉が食べたいだけなんです  
+
+---  
 
 喂客服啊  
 wèi kèfú a  
@@ -102,9 +104,9 @@ nǐ jìdé wǒ bù
 wǒ shì nàgè  
 私はあの…  
 
-吃藕根粉的广东人  
-chī ǒugēn fěn de Guǎngdōng rén  
-「藕根粉を食べる広東人」です  
+吃蕨根粉的广东人  
+chī juégēn fěn de Guǎngdōng rén  
+「蕨根粉を食べる広東人」です  
 
 怎么这回事  
 zěnme zhè huíshì  
@@ -116,7 +118,7 @@ gěi wǒ jì le liǎng xiāng suānlàfěn
 
 对不起亲亲  
 duìbuqǐ qīnqīn  
-すみません、お客様（ネットスラングの「親親」）  
+すみません、お客様  
 
 仓库那群人  
 cāngkù nà qún rén  
@@ -124,7 +126,7 @@ cāngkù nà qún rén
 
 跟中招了一样  
 gēn zhòngzhāo le yīyàng  
-まるで集団でやらかしちゃったみたいで（ミス続発）  
+集団でミスを連発しちゃったようで  
 
 这边帮您申请仅退款呢  
 zhè biān bāng nín shēnqǐng jǐn tuìkuǎn ne  
@@ -140,7 +142,7 @@ cāngkù nà qún rén
 
 真的跟中招了似的  
 zhēnde gēn zhòngzhāo le shì de  
-本当に集団で何かにハマってしまったみたいですよね  
+本当に何かに引っかかったみたいに失敗続きですよね  
 
 大家在网购的时候  
 dàjiā zài wǎnggòu de shíhou  
@@ -158,52 +160,54 @@ lái gēn wǒ shuō shuo ba
 wǎn'ān  
 おやすみなさい  
 
+---
+
 ## 単語リスト
 
-1. **藕根粉 (ǒugēn fěn)**  
-   - 意味: レンコン粉  
+1. **蕨根粉 (juégēn fěn)**  
+   - 意味: ワラビの根から作られるデンプン粉  
    - HSKレベル: （正式収録なし・上級語扱い）  
-   - 補足: レンコンを粉末にしたもので、甜品（デザート）や粥のように調理される  
+   - 補足: 主に南方地域で食される伝統食材の一つ  
 
 2. **酸辣粉 (suānlàfěn)**  
    - 意味: 酸辣粉（サンラーフェン）、辛酸っぱい春雨料理  
    - HSKレベル: （正式収録なし・上級語扱い）  
-   - 補足: 中国西南地域の有名な庶民料理  
+   - 補足: 四川や重庆など西南地域の有名庶民料理  
 
 3. **退款 (tuìkuǎn)**  
    - 意味: 返金、払い戻し  
    - HSKレベル: 5〜6  
-   - 補足: 動詞として「退款する」、名詞として「返金」を指す  
+   - 補足: 動詞としても名詞としても使われる（例：我要退款 / 给我办理退款）  
 
 4. **寄 (jì)**  
    - 意味: 郵送する、送る  
    - HSKレベル: 4〜5  
    - 補足: 「寄快递(jì kuàidì)」＝宅配便で送る  
 
-5. **售后 (shòuhòu)**  
-   - 意味: アフターサービス、アフターサポート  
-   - HSKレベル: （正式収録なし・参考として5〜6程度）  
-   - 補足: 「售后地址」= カスタマーサポート用の返送先住所  
-
-6. **广东人 (Guǎngdōng rén)**  
+5. **广东人 (Guǎngdōng rén)**  
    - 意味: 広東省出身の人  
    - HSKレベル: （“广东”は4〜5程度）  
    - 補足: 広東料理・広東語などで有名な地域  
 
-7. **中招 (zhòng zhāo)**  
-   - 意味: （悪いことに）引っかかる、ミスをする、トラップにかかる  
+6. **中招 (zhòng zhāo)**  
+   - 意味: （悪いことに）引っかかる、トラップにかかる  
    - HSKレベル: （正式収録なし・口語上級）  
-   - 補足: 元は「中（了）招儿」で「計略にかかった」というスラング  
+   - 補足: 「中招儿」や「被套路(tàolù)」などと似たニュアンス  
 
-8. **亲亲 (qīnqīn)**  
-   - 意味: （タオバオ等ECサイトで店員がお客さんを呼ぶときの）親しげな呼びかけ「お客さん」  
+7. **亲亲 (qīnqīn)**  
+   - 意味: （タオバオ等ECサイトで店員がお客さんを呼ぶ）親しみを込めた呼びかけ  
    - HSKレベル: （正式収録なし・ネット用語）  
-   - 補足: 中国のネットショップでよく使われる愛称  
+   - 補足: 「亲(亲)」はネットショップ店員のお決まりフレーズ  
+
+8. **仓库 (cāngkù)**  
+   - 意味: 倉庫  
+   - HSKレベル: 4〜5  
+   - 補足: 「仓库管理员(cāngkù guǎnlǐyuán)」＝倉庫担当のスタッフ  
 
 9. **离谱 (lípǔ)**  
    - 意味: 常識外れ、かけ離れている  
    - HSKレベル: （正式収録なし・口語上級）  
-   - 補足: 「离谱的经历」で「とんでもない体験」というニュアンス  
+   - 補足: 「离谱的事情」「离谱的错误」など  
 
 10. **网购 (wǎnggòu)**  
     - 意味: ネットショッピング  
