update: HSK1級の単語は除く

--- a/2025/10/06.md
+++ b/2025/10/06.md
@@ -134,52 +134,52 @@ Wǎn'ān la
 
 ## 単語リスト
 
-* **晚上 (wǎnshang)**
-- 意味: 夜、晩
-- HSKレベル: 1
-- 補足: 「晩上好 (Wǎnshàng hǎo)」で「こんばんは」という挨拶によく使われます。
-
-* **今天 (jīntiān)**
-- 意味: 今日
-- HSKレベル: 1
-- 補足: 日付や時間に関する基本的な単語です。
+* **方言 (fāngyán)**
+- 意味: 方言、地域語
+- HSKレベル: 5
+- 補足: 特定の地域で話されている言葉を指します。
 
 * **猜 (cāi)**
 - 意味: 当てる、推測する
 - HSKレベル: 3
-- 補足: 謎やクイズを解く時など、何かを推測する行為に使われます。
-
-* **方言 (fāngyán)**
-- 意味: 方言
-- HSKレベル: 5
-- 補足: 特定の地域で話される言葉を指します。
+- 補足: クイズや謎などを解くとき、答えを推測する行為に使われます。
 
 * **鱼 (yú)**
 - 意味: 魚
-- HSKレベル: 1
-- 補足: 動物名の一つで、ここでは「三三鱼 (Sānsān yú)」という方言の音に似た言葉の一部として登場しています。
+- HSKレベル: 2
+- 補足: 動物名の一つです。（「三三鱼」という方言の音に似た言葉として登場）
 
-* **山 (shān)**
-- 意味: 山
-- HSKレベル: 1
-- 補足: 自然の地形を表す基本的な名詞です。
-
-* **钱 (qián)**
-- 意味: お金、金銭
-- HSKレベル: 1
-- 補足: 「没钱 (méi qián)」で「お金がない」という意味になります。
-
-* **意思 (yìsi)**
-- 意味: 意味、意図
-- HSKレベル: 3
-- 補足: ある表現や行動が表す内容を指すのに使われます。
+* **为什么 (wèishénme)**
+- 意味: なぜ、どうして
+- HSKレベル: 2
+- 補足: 理由や原因を尋ねる疑問詞です。
 
 * **想象 (xiǎngxiàng)**
 - 意味: 想像する
 - HSKレベル: 4
-- 補足: 頭の中で思い描く、あるいは予想するという意味です。
+- 補足: 心の中で思い描く、または予想するという意味です。
 
 * **好玩 (hǎowán)**
 - 意味: 面白い、楽しい
 - HSKレベル: 3
-- 補足: 娯楽や活動が楽しいと感じる時に使われる形容詞です。
+- 補足: 娯楽や活動が楽しいと感じる時に使われます。
+
+* **评论区 (pínglùn qū)**
+- 意味: コメント欄
+- HSKレベル: 4（**评论**として）
+- 補足: インターネット上の意見交換の場所を指します。
+
+* **互相 (hùxiāng)**
+- 意味: お互いに、相互に
+- HSKレベル: 4
+- 補足: 双方の間で同じ行為を行うことを示します。
+
+* **下一个 (xià yīgè)**
+- 意味: 次の（一つ）
+- HSKレベル: 2（**个**として）
+- 補足: 物や事柄の順番で「次」を指します。
+
+* **意思 (yìsi)**
+- 意味: 意味、意図
+- HSKレベル: 3
+- 補足: ある表現や行動が表す内容を指します。
